# DiMark

./: .env.example  .gitignore
apps/analytics/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/analytics/alembic/: env.py
apps/analytics/alembic/versions/: 0001_create_measurement_tables.py  0002_strategist_tables.py  0003_experiments.py  0004_agent_tables.py  0005_execution_tables.py  0006_optimization_tables.py  0007_action_learning_tables.py
apps/analytics/app/: agent_api.py  agent_schemas.py  api.py  async_db.py  db.py  execution_api.py  main.py  models.py  optimization_api.py  optimization_schemas.py  schemas.py  settings.py
apps/analytics/app/services/: allocation_policy.py  cycle_runner.py  measurement.py  strategist.py
apps/analytics/app/services/agents/: __init__.py  base_agent.py  executor_agent.py  llm_client.py  orchestrator.py  planner_agent.py  tool_registry.py
apps/analytics/app/services/execution/: __init__.py  base.py  channel_models.py  simulator.py
apps/analytics/app/utils/: image_utils.py
apps/analytics/scripts/: test_meta_live.py
apps/analytics/tests/: conftest.py  test_agent_api.py  test_agent_react.py  test_execution_tools.py  test_executor_agent.py  test_experiments.py  test_image_utils.py  test_measurement_api.py  test_meta_ads.py  test_meta_image_upload.py  test_optimization_engine.py  test_optimization_executor.py  test_optimization_methods.py  test_optimization_metrics.py  test_optimization_monitor.py  test_optimization_verifier.py  test_platforms.py  test_run_cycles.py  test_strategist_flow.py  test_tool_registry.py
(+49 files in other folders)
